# FaceIt

./: .gitattributes  .gitignore  0.10.0  0.15.0  0.17.0  0.2.0  0.30.0  0.4.0  1.0.0  1.16.0  1.2.0  1.2.1  1.21.0  1.3.0  1.7.0  12.0.0  2.0.0  2.8.0  2022.0  2024.1.0  21.0  24.0.0  3.0.0  3.10.0  3.12.0  3.7.0  4.0.0  4.5.0  4.50.0  5.0.0  5.15.0  8.0.0  LICENSE  Pipfile  README.md  add_depend.py  main.py  pupil_detection.py  pyproject.toml  readthedocs.yaml  (+3 more)
FACEIT_codes/: GUI_Intractions.py  Graphical_ROIS.py  Load_data.py  Paper_figures.py  Save.py  Workers.py  analysis.py  check.py  check_delete.py  check_inst  deinterlaced.py  delete.py  display_and_plots.py  frame_pos.npy  functions.py  main.py  paper_figure.py  paper_figure2.py  pupil_detection.py  test.py  test_main.py
FACEIT_codes/results/: pupil_detection_results.xlsx
FACEIT_codes/syntatic_data/: Extract_video_frame.py  User_detection.py  check_frame.py  deInterlaced.py  manual_frame_detection_test.py  plot.py  population_data.py  read_DLC.py  syntatic data test.py  test_data.py  test_delet.py
docs/source/: FaceMotion_Computation.rst  Pupil detection.rst  Pupil_detection.rst  Using_GUI.rst  conf.py  index.rst  inputs.rst  installation.rst  output.rst
docs/source/_static/: custom.css  documentation_options.js
test_data/test_images/: 1710514480.0866444.npy  1710514480.1196427.npy  1710514480.1526394.npy  1710514480.2197604.npy  1710514480.2528822.npy  1710514480.2859318.npy  1710514480.3199322.npy  1710514480.3855836.npy  1710514480.4196045.npy  1710514480.4856892.npy  1710514480.552814.npy  1710514480.5858142.npy  1710514480.6198657.npy  1710514480.6519523.npy  1710514480.685952.npy  1710514480.720057.npy  1710514480.7530575.npy  1710514480.7860596.npy  1710514480.8193765.npy  1710514480.8521473.npy  1710514480.886146.npy  1710514480.919146.npy  1710514480.952147.npy  1710514480.9861465.npy  1710514481.0191479.npy  1710514481.0521476.npy  1710514481.0861478.npy  1710514481.1191475.npy  1710514481.153191.npy  1710514481.186194.npy  1710514481.2191935.npy  1710514481.253193.npy  1710514481.2861934.npy  1710514481.3192844.npy  1710514481.352284.npy  1710514481.3862844.npy  1710514481.4192865.npy  1710514481.4523742.npy  1710514481.4863732.npy  1710514481.5193734.npy  (+1062 more)
