[project]
name = "faceit"
version = "1.0.0"
description = "FACEIT is a pipeline to analyze facial movements, such as eye movements and the mouse's muzzle"
authors = [
    {name = "faezeh.rabbani",email = "faezeh.rabbani97@gmail.com"}
]
license = {text = "\"MIT\""}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "attrs (>=25.1.0,<26.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "fonttools (>=4.55.6,<5.0.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "hdmf (>=4.0.0,<5.0.0)",
    "importlib-resources (>=6.5.2,<7.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "jsonschema-specifications (>=2024.10.1,<2025.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "packaging (>=24.2,<25.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pynwb (>=2.8.3,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "pyqt5-sip (>=12.16.1,<13.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "referencing (>=0.36.2,<0.37.0)",
    "rpds-py (>=0.22.3,<0.23.0)",
    "ruamel-yaml (>=0.18.10,<0.19.0)",
    "ruamel-yaml-clib (>=0.2.12,<0.3.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "six (>=1.17.0,<2.0.0)",
    "threadpoolctl (>=3.5.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "tzdata (>=2025.1,<2026.0)",
    "zipp (>=3.21.0,<4.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
