[project]
name = "faceit"
version = "1.0.0"
description = "FACEIT is a pipeline to analyze facial movements, such as eye movements and the mouse's muzzle"
authors = [
    {name = "faezeh.rabbani", email = "faezeh.rabbani97@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
    "attrs (>=23.2.0,<24.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cycler (>=0.12.1,<0.13.0)",
    "fonttools (>=4.51.0,<4.52.0)",
    "h5py (>=3.12.1,<4.0.0)",
    "hdmf (>=3.14.5,<4.0.0)",
    "importlib-resources (>=6.4.0,<6.5.0)",
    "joblib (>=1.4.0,<1.5.0)",
    "jsonschema (>=4.22.0,<4.23.0)",
    "jsonschema-specifications (>=2023.12.1,<2024.0.0)",
    "opencv-python (>=4.9.0.80,<5.0.0)",
    "packaging (>=24.0,<24.3)",
    "pandas (>=2.0.0,<2.1.0)",
    "pillow (>=10.3.0,<11.0.0)",
    "pynwb (>=2.7.0,<2.8.0)",
    "pyparsing (>=3.1.2,<3.2.0)",
    "pyqt5-sip (>=12.15.0,<12.16.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2024.1,<2025.0)",
    "referencing (>=0.35.1,<0.36.0)",
    "rpds-py (>=0.18.1,<0.19.0)",
    "ruamel-yaml (>=0.18.6,<0.19.0)",
    "ruamel-yaml-clib (>=0.2.8,<0.3.0)",
    "scikit-learn (>=1.2.2,<1.3.0)",
    "six (>=1.16.0,<1.17.0)",
    "threadpoolctl (>=3.4.0,<3.5.0)",
    "tqdm (>=4.66.5,<4.67.0)",
    "tzdata (>=2024.1,<2025.0)",
    "zipp (>=3.21.0,<3.22.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "contourpy (>=1.2.1,<1.3.0)",
    "kiwisolver (>=1.4.5,<1.5.0)",
    "matplotlib (>=3.8.4,<3.9.0)",
    "numpy (>=1.24.4,<1.25.0)",
    "scipy (>=1.9.1,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "FACEIT_codes" }]

[tool.poetry.extras]
tests = ["pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
homepage = "https://github.com/faezehrabbani97/FaceIt"
repository = "https://github.com/faezehrabbani97/FaceIt"
documentation = "https://github.com/faezehrabbani97/FaceIt/wiki"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
