[project]
name = "faceit"
version = "1.0.0"
description = "FACEIT is a pipeline to analyze facial movements, such as eye movements and the mouse's muzzle"
authors = [{name = "faezeh.rabbani", email = "faezeh.rabbani97@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<3.10"

# Dependencies
dependencies = [
    "attrs>=23.2.0,<24.0.0",
    "colorama>=0.4.6,<0.5.0",
    "opencv-python>=4.9.0.80,<5.0.0",
    "pandas>=2.0.0,<2.1.0",
    "PyQt5>=5.15.9,<5.16.0",
    "matplotlib>=3.8.4,<3.9.0",
    "numpy>=1.24.4,<1.25.0",
    "scipy>=1.9.1,<2.0.0",
    "bottleneck>=1.3.7,<2.0.0",
    "pynwb>=2.0.0",
    "tqdm>=4.0.0",
    "scikit-learn>=1.2.2,<1.3.0; platform_system != 'Windows'" 
]


# Optional Dependencies
[project.optional-dependencies]
gui = ["PyQt5", "pyqtgraph"]
io = ["h5py", "pynwb"]

[project.scripts]
faceit = "FACEIT_codes.main:main"  # Allows running `faceit` in terminal

[tool.poetry]
packages = [{ include = "FACEIT_codes" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
